updated build.gradle working with JDK17 to build jdk src with phee v1.13.3 version of app